Remove overflow:hidden from body, cuts off content of fixed-width elements

--- a/normalize.css
+++ b/normalize.css
@@ -55,12 +55,10 @@ html {
 
 /*
  * Remove margin and hide overflow from <body> element
- * Margin overflow displayed incorrectly in IE6/7
 */
 
 body {
 	margin: 0;
-	overflow: hidden;
 }
 
 /*
